Połączenie dwóch kart

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <main>
       <section>
         <h1>EFEKTYWNE ROZWIĄZANIA<br />DLA WASZEGO BIZNESU</h1>
-        <button type="button">Zamów usługę</button>
+        <a href="portfolio.html">
+          <button type="button">Zamów usługę</button>
+        </a>
         <ul>
           <li>
             <h4>LOREM IPSUM</h4>
