--- a/portfolio.html
+++ b/portfolio.html
@@ -44,32 +44,80 @@
                         <h4>Technocrack</h4>
                         <p>Strona Internetowa</p>
                     </li>
-                     <li>
+                    <li>
                         <img src="xyz123.jpg"
                         width="666"
                         height="666"
-                        alt="laptop with main portfolio page open"/>
-                        <h4>Technocrack</h4>
+                        alt="Basketball players at game"/>
+                        <h4>Grafika New Orlean vs Golden Star</h4>
+                        <p>Dizajn</p>
+                    </li>
+                    <li>
+                        <img src="xyz123.jpg"
+                        width="666"
+                        height="666"
+                        alt="Picture of logo an Seafood restaurant"/>
+                        <h4>Restaurant Seafood</h4>
+                        <p>Aplikacja</p>
+                    </li>
+                    <li>
+                        <img src="xyz123.jpg"
+                        width="666"
+                        height="666"
+                        alt="Image of headfone"/>
+                        <h4>Projekt Prime</h4>
+                        <p>Marketing</p>
+                    </li>
+                    <li>
+                        <img src="xyz123.jpg"
+                        width="666"
+                        height="666"
+                        alt="Image with project of boxes"/>
+                        <h4>Projekt Boxes</h4>
+                        <p>Aplikacja</p>
+                    </li>
+                    <li>
+                        <img src="xyz123.jpg"
+                        width="666"
+                        height="666"
+                        alt="Image of screen shows dark modern website"/>
+                        <h4>Inspiration has no Boders</h4>
                         <p>Strona Internetowa</p>
                     </li>
-                     <li>
+                    <li>
                         <img src="xyz123.jpg"
                         width="666"
                         height="666"
-                        alt="laptop with main portfolio page open"/>
-                        <h4>Technocrack</h4>
-                        <p>Strona Internetowa</p>
+                        alt="Book with pictures on pages"/>
+                        <h4>Magazyn Limited Edition</h4>
+                        <p>Dizajn</p>
                     </li>
-                     <li>
+                    <li>
                         <img src="xyz123.jpg"
                         width="666"
                         height="666"
-                        alt="laptop with main portfolio page open"/>
-                        <h4>Technocrack</h4>
-                        <p>Strona Internetowa</p>
+                        alt="Image of Project a label"/>
+                        <h4>Projeky LAB</h4>
+                        <p>Marketing</p>
+                    </li>
+                    <li>
+                        <img src="xyz123.jpg"
+                        width="666"
+                        height="666"
+                        alt="work on laptop in website"/>
+                        <h4>Growing Business</h4>
+                        <p>Aplikacja</p>
                     </li>
                 </ul>
             </section>
+            <footer>
+                <a href="index.html" target="_self">WebStudio</a>
+                <address>
+                    m. Warszawa, Aleje Jerozolimskie 21
+                    <a href="mailto:info@example.com">info@example.com</a>
+                    <a href="tel:48111111111">+48 111 111 111</a>
+                </address>
+            </footer>
         </main>
     </body>
 </html>
