--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-      <a href="index.html" target="_self"><span>WebStudio</span></a>
       <nav>
+        <a href="index.html" target="_self"><span>WebStudio</span></a>
         <a href="agencja.html"><span>Agencja</span></a>
         <a href="portfolio.html"><span>Portfolio</span></a>
         <a href="kontakt.html"><span>Kontakt</span></a>
@@ -122,7 +122,7 @@
               alt="personal photo of UI designer"
             />
             <h3>John Doe</h3>
-            UI Designer
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
