--- a/portfolio.html
+++ b/portfolio.html
@@ -19,93 +19,93 @@
             <section><!-- sekcja, która zawiera listę przycisków -->
                 <ul>
                     <li>
-                        <button type="button"></button>
+                        <button type="button">Wszystkie</button>
                     </li>
                     <li>
-                        <button type="button"></button>
+                        <button type="button">Strony</button>
                     </li>
                     <li>
-                        <button type="button"></button>
+                        <button type="button">Aplikacje</button>
                     </li>
                     <li>
-                        <button type="button"></button>
+                        <button type="button">Dizajn</button>
                     </li>
                     <li>
-                        <button type="button"></button>
+                        <button type="button">Marketing</button>
                     </li>
                 </ul>
             </section>
             <section><!--Sekcja w której znajdują się sekcje/obrazy produktów-->
                 <ul>
                     <li>
-                        <img src="xyz123.jpg"
-                        width="666"
-                        height="666"
+                        <img src="images/laptopwithportfolio.jpg"
+                        width="370"
+                        height="294"
                         alt="laptop with main portfolio page open"/>
                         <h4>Technocrack</h4>
                         <p>Strona Internetowa</p>
                     </li>
                     <li>
-                        <img src="xyz123.jpg"
-                        width="666"
-                        height="666"
+                        <img src="images/basketballplayers.jpg"
+                        width="370"
+                        height="294"
                         alt="Basketball players at game"/>
                         <h4>Grafika New Orlean vs Golden Star</h4>
                         <p>Dizajn</p>
                     </li>
                     <li>
-                        <img src="xyz123.jpg"
-                        width="666"
-                        height="666"
+                        <img src="images/seafood restaurant.jpg"
+                        width="370"
+                        height="294"
                         alt="Picture of logo an Seafood restaurant"/>
                         <h4>Restaurant Seafood</h4>
                         <p>Aplikacja</p>
                     </li>
                     <li>
-                        <img src="xyz123.jpg"
-                        width="666"
-                        height="666"
-                        alt="Image of headfone"/>
+                        <img src="images/headphone.jpg"
+                        width="370"
+                        height="294"
+                        alt="Image of headphone"/>
                         <h4>Projekt Prime</h4>
                         <p>Marketing</p>
                     </li>
                     <li>
-                        <img src="xyz123.jpg"
-                        width="666"
-                        height="666"
+                        <img src="images/boxes.jpg"
+                        width="370"
+                        height="294"
                         alt="Image with project of boxes"/>
                         <h4>Projekt Boxes</h4>
                         <p>Aplikacja</p>
                     </li>
                     <li>
-                        <img src="xyz123.jpg"
-                        width="666"
-                        height="666"
+                        <img src="images/darkscreen.jpg"
+                        width="370"
+                        height="294"
                         alt="Image of screen shows dark modern website"/>
                         <h4>Inspiration has no Boders</h4>
                         <p>Strona Internetowa</p>
                     </li>
                     <li>
-                        <img src="xyz123.jpg"
-                        width="666"
-                        height="666"
+                        <img src="images/bookwithpictures.jpg"
+                        width="370"
+                        height="294"
                         alt="Book with pictures on pages"/>
                         <h4>Magazyn Limited Edition</h4>
                         <p>Dizajn</p>
                     </li>
                     <li>
-                        <img src="xyz123.jpg"
-                        width="666"
-                        height="666"
-                        alt="Image of Project a label"/>
+                        <img src="images/label.jpg"
+                        width="370"
+                        height="294"
+                        alt="Image of label project"/>
                         <h4>Projeky LAB</h4>
                         <p>Marketing</p>
                     </li>
                     <li>
-                        <img src="xyz123.jpg"
-                        width="666"
-                        height="666"
-                        alt="work on laptop in website"/>
+                        <img src="images/workonlaptop.jpg"
+                        width="370"
+                        height="294"
+                        alt="images/workonlaptop.jpg"/>
                         <h4>Growing Business</h4>
                         <p>Aplikacja</p>
                     </li>
