--- a/index.html
+++ b/index.html
@@ -4,24 +4,50 @@
     <meta charset="utf-8" />
     <meta name="WebStudio" content="biuro projktowe + development" />
     <title>Studio</title>
+    <link rel="stylesheet" href="CSS\styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <nav>
-        <a href="index.html" target="_self"><span>WebStudio</span></a>
-        <a href="agencja.html"><span>Agencja</span></a>
-        <a href="portfolio.html"><span>Portfolio</span></a>
-        <a href="kontakt.html"><span>Kontakt</span></a>
+        <a
+          class="header-logo-blue"
+          thref="index.html"
+          target="_self"
+          href="index.html"
+          ><span>Web</span></a
+        ><a
+          class="header-logo-right"
+          thref="index.html"
+          target="_self"
+          href="index.html"
+          ><span>Studio</span></a
+        >
+        <a class="header-agency" href="agencja.html"><span>Agencja</span></a>
+        <a class="header-portfolio" href="portfolio.html"
+          ><span>Portfolio</span></a
+        >
+        <a class="header-contact" href="kontakt.html"><span>Kontakt</span></a>
       </nav>
-      <a href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
-      <a href="tel:48111111111"><span>+48 111 111 111</span></a>
+      <a class="header-links-contact" href="mailto:info@devstudio.com"
+        ><span>info@devstudio.com</span></a
+      >
+      <a class="header-links-contact" href="tel:48111111111"
+        ><span>+48 111 111 111</span></a
+      >
     </header>
     <main>
-      <section>
+      <section class="main-button-place">
         <h1>EFEKTYWNE ROZWIĄZANIA<br />DLA WASZEGO BIZNESU</h1>
-        <a href="portfolio.html">
-          <button type="button">Zamów usługę</button>
+        <a class="main-button" href="portfolio.html" button type="button">Zamów usługe</button>
         </a>
+      </section>
+      <section>
         <ul>
           <li>
             <h4>LOREM IPSUM</h4>
