--- a/portfolio.html
+++ b/portfolio.html
@@ -1,124 +1,170 @@
 <!DOCTYPE html lang="pl-PL">
 <html>
-    <body>
-        <meta charset="utf-8" />
-        <meta name="WebStudio" content="biuro projktowe + development" />
-        <title>Portfolio</title>
-        <main>
-            <header>
-                    <a href="index.html" target="_self"><span>WebStudio</span></a>
-                    <nav>
-                        <a href="agencja.html"><span>Agencja</span></a>
-                        <a href="portfolio.html"><span>Portfolio</span></a>
-                        <a href="kontakt.html"><span>Kontakt</span></a>
-                    </nav>
-                    <a href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
-                    <a href="tel:48111111111"><span>+48 111 111 111</span></a>
-                    <hr>
-            </header>
-            <section><!-- sekcja, która zawiera listę przycisków -->
-                <ul>
-                    <li>
-                        <button type="button">Wszystkie</button>
-                    </li>
-                    <li>
-                        <button type="button">Strony</button>
-                    </li>
-                    <li>
-                        <button type="button">Aplikacje</button>
-                    </li>
-                    <li>
-                        <button type="button">Dizajn</button>
-                    </li>
-                    <li>
-                        <button type="button">Marketing</button>
-                    </li>
-                </ul>
-            </section>
-            <section><!--Sekcja w której znajdują się sekcje/obrazy produktów-->
-                <ul>
-                    <li>
-                        <img src="images/laptopwithportfolio.jpg"
-                        width="370"
-                        height="294"
-                        alt="laptop with main portfolio page open"/>
-                        <h4>Technocrack</h4>
-                        <p>Strona Internetowa</p>
-                    </li>
-                    <li>
-                        <img src="images/basketballplayers.jpg"
-                        width="370"
-                        height="294"
-                        alt="Basketball players at game"/>
-                        <h4>Grafika New Orlean vs Golden Star</h4>
-                        <p>Dizajn</p>
-                    </li>
-                    <li>
-                        <img src="images/seafood restaurant.jpg"
-                        width="370"
-                        height="294"
-                        alt="Picture of logo an Seafood restaurant"/>
-                        <h4>Restaurant Seafood</h4>
-                        <p>Aplikacja</p>
-                    </li>
-                    <li>
-                        <img src="images/headphone.jpg"
-                        width="370"
-                        height="294"
-                        alt="Image of headphone"/>
-                        <h4>Projekt Prime</h4>
-                        <p>Marketing</p>
-                    </li>
-                    <li>
-                        <img src="images/boxes.jpg"
-                        width="370"
-                        height="294"
-                        alt="Image with project of boxes"/>
-                        <h4>Projekt Boxes</h4>
-                        <p>Aplikacja</p>
-                    </li>
-                    <li>
-                        <img src="images/darkscreen.jpg"
-                        width="370"
-                        height="294"
-                        alt="Image of screen shows dark modern website"/>
-                        <h4>Inspiration has no Boders</h4>
-                        <p>Strona Internetowa</p>
-                    </li>
-                    <li>
-                        <img src="images/bookwithpictures.jpg"
-                        width="370"
-                        height="294"
-                        alt="Book with pictures on pages"/>
-                        <h4>Magazyn Limited Edition</h4>
-                        <p>Dizajn</p>
-                    </li>
-                    <li>
-                        <img src="images/label.jpg"
-                        width="370"
-                        height="294"
-                        alt="Image of label project"/>
-                        <h4>Projeky LAB</h4>
-                        <p>Marketing</p>
-                    </li>
-                    <li>
-                        <img src="images/workonlaptop.jpg"
-                        width="370"
-                        height="294"
-                        alt="images/workonlaptop.jpg"/>
-                        <h4>Growing Business</h4>
-                        <p>Aplikacja</p>
-                    </li>
-                </ul>
-            </section>
-            <footer>
-                <a href="index.html" target="_self">WebStudio</a>
-                <address>
-                    m. Warszawa, Aleje Jerozolimskie 21
-                    <a href="mailto:info@example.com">info@example.com</a>
-                    <a href="tel:48111111111">+48 111 111 111</a>
-                </address>
-            </footer>
-        </main>
-    </body>
+  <body>
+    <head>
+      <meta charset="utf-8" />
+      <meta name="WebStudio" content="biuro projktowe + development" />
+      <title>Studio</title>
+      <link rel="stylesheet" href="CSS\styles.css" />
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet"
+      />
+    </head>
+    <main>
+      <header>
+        <nav>
+          <a
+            class="header-logo-blue"
+            thref="index.html"
+            target="_self"
+            href="index.html"
+            ><span>Web</span></a
+          ><a
+            class="header-logo-right"
+            thref="index.html"
+            target="_self"
+            href="index.html"
+            ><span>Studio</span></a
+          >
+          <a class="header-agency" href="agencja.html"><span>Agencja</span></a>
+          <a class="header-portfolio" href="portfolio.html"
+            ><span>Portfolio</span></a
+          >
+          <a class="header-contact" href="kontakt.html"><span>Kontakt</span></a>
+        </nav>
+        <a class="header-links-contact" href="mailto:info@devstudio.com"
+          ><span>info@devstudio.com</span></a
+        >
+        <a class="header-links-contact" href="tel:48111111111"
+          ><span>+48 111 111 111</span></a
+        >
+      </header>
+      <section>
+        <!-- sekcja, która zawiera listę przycisków -->
+        <ul>
+          <li>
+            <button type="button">Wszystkie</button>
+          </li>
+          <li>
+            <button type="button">Strony</button>
+          </li>
+          <li>
+            <button type="button">Aplikacje</button>
+          </li>
+          <li>
+            <button type="button">Dizajn</button>
+          </li>
+          <li>
+            <button type="button">Marketing</button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <!--Sekcja w której znajdują się sekcje/obrazy produktów-->
+        <ul>
+          <li>
+            <img
+              src="images/laptopwithportfolio.jpg"
+              width="370"
+              height="294"
+              alt="laptop with main portfolio page open"
+            />
+            <h4>Technocrack</h4>
+            <p>Strona Internetowa</p>
+          </li>
+          <li>
+            <img
+              src="images/basketballplayers.jpg"
+              width="370"
+              height="294"
+              alt="Basketball players at game"
+            />
+            <h4>Grafika New Orlean vs Golden Star</h4>
+            <p>Dizajn</p>
+          </li>
+          <li>
+            <img
+              src="images/seafood restaurant.jpg"
+              width="370"
+              height="294"
+              alt="Picture of logo an Seafood restaurant"
+            />
+            <h4>Restaurant Seafood</h4>
+            <p>Aplikacja</p>
+          </li>
+          <li>
+            <img
+              src="images/headphone.jpg"
+              width="370"
+              height="294"
+              alt="Image of headphone"
+            />
+            <h4>Projekt Prime</h4>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="images/boxes.jpg"
+              width="370"
+              height="294"
+              alt="Image with project of boxes"
+            />
+            <h4>Projekt Boxes</h4>
+            <p>Aplikacja</p>
+          </li>
+          <li>
+            <img
+              src="images/darkscreen.jpg"
+              width="370"
+              height="294"
+              alt="Image of screen shows dark modern website"
+            />
+            <h4>Inspiration has no Boders</h4>
+            <p>Strona Internetowa</p>
+          </li>
+          <li>
+            <img
+              src="images/bookwithpictures.jpg"
+              width="370"
+              height="294"
+              alt="Book with pictures on pages"
+            />
+            <h4>Magazyn Limited Edition</h4>
+            <p>Dizajn</p>
+          </li>
+          <li>
+            <img
+              src="images/label.jpg"
+              width="370"
+              height="294"
+              alt="Image of label project"
+            />
+            <h4>Projeky LAB</h4>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="images/workonlaptop.jpg"
+              width="370"
+              height="294"
+              alt="images/workonlaptop.jpg"
+            />
+            <h4>Growing Business</h4>
+            <p>Aplikacja</p>
+          </li>
+        </ul>
+      </section>
+      <footer>
+        <a href="index.html" target="_self">WebStudio</a>
+        <address>
+          m. Warszawa, Aleje Jerozolimskie 21
+          <a href="mailto:info@example.com">info@example.com</a>
+          <a href="tel:48111111111">+48 111 111 111</a>
+        </address>
+      </footer>
+    </main>
+  </body>
 </html>
