--- a/index.html
+++ b/index.html
@@ -48,40 +48,48 @@
         </a>
       </section>
       <section>
-        <ul>
+        <ul class="lorem-list">
           <li>
-            <h4>LOREM IPSUM</h4>
-            <p>
+            <span>
+            <h4 class="lorem-h-four">LOREM IPSUM</h4>
+            <p class="lorem-four">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
+            </span>
           </li>
           <li>
-            <h4>LOREM IPSUM</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
+            <span>
+              <h4 class="lorem-h-four">LOREM IPSUM</h4>
+              <p class="lorem-four">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </span>
           </li>
           <li>
-            <h4>LOREM IPSUM</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
+            <span>
+              <h4 class="lorem-h-four">LOREM IPSUM</h4>
+              <p class="lorem-four">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </span>
           </li>
           <li>
-            <h4>LOREM IPSUM</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
+            <span>
+              <h4 class="lorem-h-four">LOREM IPSUM</h4>
+              <p class="lorem-four">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </span>
           </li>
         </ul>
       </section>
       <section>
-        <h3>Czym się zajmujemy</h3>
-        <ul>
+        <h3 class="what-we-do">Czym się zajmujemy</h3>
+        <ul class="lorem-list">
           <li>
             <img
               src="images/whatwedoone.jpg"
@@ -108,8 +116,9 @@
           </li>
         </ul>
       </section>
-      <section>
-        <ul>
+      <section class="team">
+        <h3 class="what-we-do">Nasz zespół</h3>
+        <ul class="lorem-list">
           <li>
             <img
               src="images/productdesigner.jpg"
@@ -117,7 +126,7 @@
               height="260"
               alt="personal photo of product designer"
             />
-            <h3>John Doe</h3>
+            <h3 class="team-name">John Doe</h3>
             <p>Product Designer</p>
           </li>
           <li>
