Makieta strona studio

--- a/index.html
+++ b/index.html
@@ -29,17 +29,11 @@
           ><span>Studio</span></a
         >
         <a class="header-agency" href="agencja.html"><span>Agencja</span></a>
-        <a class="header-portfolio" href="portfolio.html"
-          ><span>Portfolio</span></a
-        >
+        <a class="header-portfolio" href="portfolio.html"><span>Portfolio</span></a>
         <a class="header-contact" href="kontakt.html"><span>Kontakt</span></a>
       </nav>
-      <a class="header-links-contact" href="mailto:info@devstudio.com"
-        ><span>info@devstudio.com</span></a
-      >
-      <a class="header-links-contact" href="tel:48111111111"
-        ><span>+48 111 111 111</span></a
-      >
+      <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
+      <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
     </header>
     <main>
       <section class="main-button-place">
@@ -127,7 +121,7 @@
               alt="personal photo of product designer"
             />
             <h3 class="team-name">John Doe</h3>
-            <p>Product Designer</p>
+            <p class="team-role">Product Designer</p>
           </li>
           <li>
             <img
@@ -136,8 +130,8 @@
               height="260"
               alt="personal photo of Fronted Developer"
             />
-            <h3>John Doe</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-name">John Doe</h3>
+            <p class="team-role">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -146,8 +140,8 @@
               height="260"
               alt="personal photo of Marketing role person"
             />
-            <h3>John Doe</h3>
-            <p>Marketing</p>
+            <h3 class="team-name">John Doe</h3>
+            <p class="team-role">Marketing</p>
           </li>
           <li>
             <img
@@ -156,19 +150,22 @@
               height="260"
               alt="personal photo of UI designer"
             />
-            <h3>John Doe</h3>
-            <p>UI Designer</p>
+            <h3 class="team-name">John Doe</h3>
+            <p class="team-role">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href="index.html" target="_self">WebStudio</a>
-      <address>
-        m. Warszawa, Aleje Jerozolimskie 21
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:48111111111">+48 111 111 111</a>
+      <section class="down-section">
+      <a class="header-logo-blue" thref="index.html" target="_self" href="index.html"><span>Web</span></a><a
+        class="header-logo-right-down" thref="index.html" target="_self" href="index.html"><span>Studio</span></a>
+      <address class="down-section">
+        <p class="down-section-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
+        <a class="down-section-email" href="mailto:info@example.com">info@example.com</a>
+        <a class="down-section-tel" href="tel:48111111111">+48 111 111 111</a>
       </address>
+      </section>
     </footer>
   </body>
 </html>
