--- a/portfolio.html
+++ b/portfolio.html
@@ -1,70 +1,52 @@
-<!DOCTYPE html lang="pl-PL">
-<html>
-  <body>
-    <head>
-      <meta charset="utf-8" />
-      <meta name="WebStudio" content="biuro projktowe + development" />
-      <title>Studio</title>
-      <link rel="stylesheet" href="CSS\styles.css" />
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet"
-      />
-    </head>
-    <main>
-      <header>
-        <nav>
-          <a
-            class="header-logo-blue"
-            thref="index.html"
-            target="_self"
-            href="index.html"
-            ><span>Web</span></a
-          ><a
-            class="header-logo-right"
-            thref="index.html"
-            target="_self"
-            href="index.html"
-            ><span>Studio</span></a
-          >
-          <a class="header-agency" href="agencja.html"><span>Agencja</span></a>
-          <a class="header-portfolio" href="portfolio.html"
-            ><span>Portfolio</span></a
-          >
-          <a class="header-contact" href="kontakt.html"><span>Kontakt</span></a>
-        </nav>
-        <a class="header-links-contact" href="mailto:info@devstudio.com"
-          ><span>info@devstudio.com</span></a
-        >
-        <a class="header-links-contact" href="tel:48111111111"
-          ><span>+48 111 111 111</span></a
-        >
-      </header>
+<!DOCTYPE html>
+<html lang="pl-PL">
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="WebStudio" content="biuro projktowe + development" />
+  <title>Studio</title>
+  <link rel="stylesheet" href="CSS/styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
+</head>
+<body>
+  <header>
+    <nav>
+      <a class="header-logo-blue" thref="index.html" target="_self" href="index.html"><span>Web</span></a><a
+        class="header-logo-right" thref="index.html" target="_self" href="index.html"><span>Studio</span></a>
+      <a class="header-agency" href="agencja.html"><span>Agencja</span></a>
+      <a class="header-portfolio" href="portfolio.html"><span>Portfolio</span></a>
+      <a class="header-contact" href="kontakt.html"><span>Kontakt</span></a>
+    </nav>
+    <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
+    <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
+  </header>
+  <main>
       <section>
         <!-- sekcja, która zawiera listę przycisków -->
-        <ul>
+        <ul class="portfolio-button-list">
           <li>
-            <button type="button">Wszystkie</button>
+            <a class="portfolio-button" href="portfolio.html" button type="button">Wszystkie</button></a>
           </li>
           <li>
-            <button type="button">Strony</button>
+            <a class="portfolio-button" href="portfolio.html" button type="button">Strony</button></a>
           </li>
           <li>
-            <button type="button">Aplikacje</button>
+            <a class="portfolio-button" href="portfolio.html" button type="button">Aplikacje</button></a>
           </li>
           <li>
-            <button type="button">Dizajn</button>
+            <a class="portfolio-button" href="portfolio.html" button type="button">Dizajn</button></a>
           </li>
           <li>
-            <button type="button">Marketing</button>
+            <a class="portfolio-button" href="portfolio.html" button type="button">Marketing</button></a>
           </li>
         </ul>
       </section>
       <section>
         <!--Sekcja w której znajdują się sekcje/obrazy produktów-->
-        <ul>
+        <ul class="portfolio-main-section">
           <li>
             <img
               src="images/laptopwithportfolio.jpg"
@@ -72,8 +54,8 @@
               height="294"
               alt="laptop with main portfolio page open"
             />
-            <h4>Technocrack</h4>
-            <p>Strona Internetowa</p>
+            <h4 class="portfolio-h-title">Technocrack</h4>
+            <p class="portfolio-description">Strona Internetowa</p>
           </li>
           <li>
             <img
@@ -82,8 +64,8 @@
               height="294"
               alt="Basketball players at game"
             />
-            <h4>Grafika New Orlean vs Golden Star</h4>
-            <p>Dizajn</p>
+            <h4 class="portfolio-h-title">Grafika New Orlean vs Golden Star</h4>
+            <p class="portfolio-description">Dizajn</p>
           </li>
           <li>
             <img
@@ -92,8 +74,8 @@
               height="294"
               alt="Picture of logo an Seafood restaurant"
             />
-            <h4>Restaurant Seafood</h4>
-            <p>Aplikacja</p>
+            <h4 class="portfolio-h-title">Restaurant Seafood</h4>
+            <p class="portfolio-description">Aplikacja</p>
           </li>
           <li>
             <img
@@ -102,8 +84,8 @@
               height="294"
               alt="Image of headphone"
             />
-            <h4>Projekt Prime</h4>
-            <p>Marketing</p>
+            <h4 class="portfolio-h-title">Projekt Prime</h4>
+            <p class="portfolio-description">Marketing</p>
           </li>
           <li>
             <img
@@ -112,8 +94,8 @@
               height="294"
               alt="Image with project of boxes"
             />
-            <h4>Projekt Boxes</h4>
-            <p>Aplikacja</p>
+            <h4 class="portfolio-h-title">Projekt Boxes</h4>
+            <p class="portfolio-description">Aplikacja</p>
           </li>
           <li>
             <img
@@ -122,8 +104,8 @@
               height="294"
               alt="Image of screen shows dark modern website"
             />
-            <h4>Inspiration has no Boders</h4>
-            <p>Strona Internetowa</p>
+            <h4 class="portfolio-h-title">Inspiration has no Boders</h4>
+            <p class="portfolio-description">Strona Internetowa</p>
           </li>
           <li>
             <img
@@ -132,8 +114,8 @@
               height="294"
               alt="Book with pictures on pages"
             />
-            <h4>Magazyn Limited Edition</h4>
-            <p>Dizajn</p>
+            <h4 class="portfolio-h-title">Magazyn Limited Edition</h4>
+            <p class="portfolio-description">Dizajn</p>
           </li>
           <li>
             <img
@@ -142,8 +124,8 @@
               height="294"
               alt="Image of label project"
             />
-            <h4>Projeky LAB</h4>
-            <p>Marketing</p>
+            <h4 class="portfolio-h-title">Projeky LAB</h4>
+            <p class="portfolio-description">Marketing</p>
           </li>
           <li>
             <img
@@ -152,19 +134,21 @@
               height="294"
               alt="images/workonlaptop.jpg"
             />
-            <h4>Growing Business</h4>
-            <p>Aplikacja</p>
+            <h4 class="portfolio-h-title">Growing Business</h4>
+            <p class="portfolio-description">Aplikacja</p>
           </li>
         </ul>
       </section>
       <footer>
-        <a href="index.html" target="_self">WebStudio</a>
-        <address>
-          m. Warszawa, Aleje Jerozolimskie 21
-          <a href="mailto:info@example.com">info@example.com</a>
-          <a href="tel:48111111111">+48 111 111 111</a>
-        </address>
+        <section class="down-section">
+          <a class="header-logo-blue" thref="index.html" target="_self" href="index.html"><span>Web</span></a><a
+            class="header-logo-right-down" thref="index.html" target="_self" href="index.html"><span>Studio</span></a>
+          <address class="down-section">
+            <p class="down-section-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
+            <a class="down-section-email" href="mailto:info@example.com">info@example.com</a>
+            <a class="down-section-tel" href="tel:48111111111">+48 111 111 111</a>
+          </address>
+        </section>
       </footer>
-    </main>
-  </body>
-</html>
+      </body>
+      </html>
