--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,7 @@
   <body>
     <header>
       <nav>
-        <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a
-        ><a class="header-logo-right" target="_self" href="index.html"><span>Studio</span></a>
+        <a class="header-logo-blue" target="_self" href="index.html"><span>Web</span></a><a class="header-logo-right" target="_self" href="index.html"><span>Studio</span></a>
         <a class="header-agency" href="agencja.html"><span>Agencja</span></a>
         <a class="header-portfolio" href="portfolio.html"><span>Portfolio</span></a>
         <a class="header-contact" href="kontakt.html"><span>Kontakt</span></a>
