--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         </li>
       </ul>
     </section>
-    <section>
-      <h3 class="what-we-do container">Czym się zajmujemy</h3>
-      <ul class="what-we-do-presentation container">
+    <section class="container">
+      <h3 class="what-we-do">Czym się zajmujemy</h3>
+      <ul class="what-we-do-presentation">
         <li>
           <img src="./images/whatwedoone.jpg" width="370" height="294" alt="projecting and coding at the desk" />
         </li>
